syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "example.com/demo-grpc/proto/user_service";

package user_service;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
}

message User {
  int64 id = 1;
  string name = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}